# huac

./: .gitignore  README.md
chap1/: chap1.cabal  input.json  input.xml  test.db
chap1/app/: Main.hs
chap1/src/: CountWords.hs  Lib.hs  ParseCsv.hs  ParseHtml.hs  ParseJson.hs  ParseXml.hs  ReadFile.hs
chap1/test/: HttpPostSpec.hs  HttpSpec.hs  MongoDBSpec.hs  Spec.hs  SqlSpec.hs
chap2/: chap2.cabal
chap2/src/: Lib.hs
chap2/test/: Spec.hs
